[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["trace", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
